--- a/client/components/home/home.html
+++ b/client/components/home/home.html
@@ -2,7 +2,7 @@
 <section id="start" class="section fullheight bg-secondary dark padding-v-60">
 
     <!-- BG Image -->
-    <div class="bg-image animated infinite zooming"><img src="/images/desktop.jpg" alt="..."></div>
+    <div class="bg-image animated infinite zooming" style="background-image: url('images/desktop.jpg')"></div>
 
     <!-- Middle -->
     <div class="container container-wide v-bottom padding-v-80">
@@ -134,3 +134,6 @@
 
     </div>
 </section>
+
+<load-template></load-template>
+
