--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -2,17 +2,17 @@
 <section id="contact" class="section padding-v-60 top">
 
     <!-- BG Map -->
-    <div id="google-map" class="bg-image" data-latitude="40.758895" data-longitude="-73.985131" data-style="light"></div>
+    <div id="google-map" class="bg-image" data-latitude="49.6218352" data-longitude="10.8232851" data-style="light"></div>
 
     <!-- Contact Box -->
     <div class="contact-box bg-secondary dark animated" data-animation="flipInY">
         <h1>Don’t hesitate to <strong>contact me</strong>!</h1>
         <!-- Contact List -->
-        <ul class="list-unstyled list-unstyled-icons">
-            <li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>1111-A Nowhere Lane,<br />Outta Sight,<br />State 90378, USA</li>
-            <li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="#">johnathandoe@suelo.pl</a></li>
-            <li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+0(31)6 89764536</li>
-        </ul>
+        <!--<ul class="list-unstyled list-unstyled-icons">-->
+            <!--<li><i class="inline-icon icon-before-and-after text-primary fa fa-map-marker"></i>1111-A Nowhere Lane,<br />Outta Sight,<br />State 90378, USA</li>-->
+            <!--<li><i class="inline-icon icon-before-and-after text-primary fa fa-comment"></i><a href="#">johnathandoe@suelo.pl</a></li>-->
+            <!--<li><i class="inline-icon icon-before-and-after text-primary fa fa-phone"></i>+0(31)6 89764536</li>-->
+        <!--</ul>-->
         <a class="btn btn-primary" data-target="messenger"><span>Use Contact Form</span><i class="ti-email"></i></a>
         <h5 class="margin-t-60">Check my social media!</h5>
         <ul class="list-inline">
@@ -27,12 +27,12 @@
 
 
 <!-- Messanger -->
-<a href="#" id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
+<a id="messenger-toggle" data-target="messenger" class="icon icon-sm icon-circle animated" data-animation="bounceIn" data-animation-delay="300"><i class="fa fa-comments"></i></a>
 <div id="messenger" class="dark">
     <div id="messenger-box">
         <div class="messenger-box-content">
             <!-- Close -->
-            <a href="#" class="messenger-close icon icon-hover icon-xs icon-circle icon-white" data-target="messenger"><i class="fa fa-times"></i></a>
+            <a class="messenger-close icon icon-hover icon-xs icon-circle icon-white" data-target="messenger"><i class="fa fa-times"></i></a>
             <!-- Avatar -->
             <img src="assets/img/photos/it-avatar-96x96.jpg" alt="..." class="img-circle margin-b-30">
             <h3>Please fill the <strong>form</strong> - I will response as fast as I can!</h3>
@@ -69,3 +69,6 @@
         </div>
     </div>
 </div>
+
+<load-template></load-template>
+
